<resources>
    <string name="app_name">YouTube</string>
    <string name="logo_description">youtube logo</string>
    <string name="app_name_youtube">YouTube</string>
    <string name="search_description">Search</string>
    <string name="home_btn_description">Home</string>
    <string name="aboutYou">About You</string>
    <string name="sub">Subscriptions</string>
    <string name="uploadBtn">Upload</string>
    <string name="home_youtube">Home</string>
    <string name="sign_in">Sign In</string>
    <string name="new_button">New</string>
    <string name="subbtn">Subscriptions</string>
    <string name="test">Test</string>
    <string name="back">Back</string>
    <string name="search">Search YouTube</string>
    <string name="comments_description">Comments</string>
    <string name="upload_date">Upload Date</string>
    <string name="views">views</string>
    <string name="duration">Duration</string>
    <string name="author">Author</string>
    <string name="image_description">Image</string>
    <string name="title_description">Title</string>
    <string name="username">Username</string>
    <string name="desc">Description</string>
    <string name="point"> • </string>
    <string name="uploadDateComment">Upload Date</string>
    <string name="likes">Likes</string>
    <string name="unlikes">Unlikes</string>
    <string name="dislikes">Dislikes</string>
    <string name="dislike_button">Dislike</string>
    <string name="like_button">Like</string>
    <string name="comment_text">Comment</string>
    <string name="title">Title</string>
    <string name="uploadDate">Upload Date</string>
    <string name="comments">Comments</string>
    <string name="all">All</string>
    <string name="music">Music</string>
    <string name="entertainment">Entertainment</string>
    <string name="sports">Sports</string>
    <string name="news">News</string>
    <string name="learning">Learning</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="amount">Amount</string>
    <string name="mode">Mode</string>
    <string name="add_comment">Add Comment</string>
    <string name="add_comment_hint">Add a comment...</string>
    <string name="send">Send</string>
    <string name="signin">Sign In</string>
    <string name="upload_image">Upload Image</string>
    <string name="unlike">Unlike</string>
    <string name="like">Like</string>
    <string name="edit_button">Edit</string>
    <string name="delete_button">Delete</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="usernameEdit">Username</string>
    <string name="content">Content</string>
    <string name="durationEdit">Duration</string>
    <string name="saveEdit">Save</string>
    <string name="select_video">Select Video</string>
    <string name="select_image">Select Image</string>
    <string name="edit_video">Edit Video</string>
    <string name="imageForVideo">imageforvideo</string>
    <string name="share">Share</string>
    <string name="share_via_whatsapp">Share via WhatsApp</string>
    <string name="share_via_instagram">Share via Instagram</string>
    <string name="share_via_facebook">Share via Facebook</string>
    <string name="log_in">log in</string>
    <string name="upload_video">Upload Video</string>
    <string name="Upload">Upload</string>
    <string name="signinUser">Sign In</string>
    <string name="BaseUrl">http://10.0.2.2:8080/api/</string>
    <string name="mediaUrl">http://10.0.2.2:8080/</string>
    <string name="videos">Videos</string>
    <string name="Log_in">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="edit_user">Edit User</string>
    <string name="delete_user">Delete User</string>
    <string name="change_profile_image">Change Profile Image</string>
    <string name="name">Name</string>
    <string name="new_password">New Password</string>
    <string name="description">Description</string>
    <string name="recommended_videos_for_you">Recommended Videos For You</string>
    <string name="more_videos">More Videos</string>
</resources>
