<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/topPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/myImageView"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:padding="7dp"
            android:contentDescription="@string/logo_description"
            android:src="@drawable/youtubeicon" />
        <TextView
            android:id="@+id/titleEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_video"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp" />

    </LinearLayout>

    <EditText
        android:id="@+id/etAuthor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/usernameEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topPage"
        android:layout_margin="16dp"
        android:padding="15dp"/>

    <EditText
        android:id="@+id/etContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etAuthor"
        android:layout_margin="16dp"
        android:padding="15dp"/>

    <EditText
        android:id="@+id/etDuration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/durationEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etContent"
        android:layout_margin="16dp"
        android:padding="15dp"/>

    <Button
        android:id="@+id/btnSelectVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_video"
        app:layout_constraintTop_toBottomOf="@id/etDuration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        android:backgroundTint="#D3D3D3"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/btnSelectImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_image"
        app:layout_constraintTop_toBottomOf="@id/btnSelectVideo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:backgroundTint="#D3D3D3"
        android:textColor="@color/black"/>

    <!-- Save Button -->
    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveEdit"
        app:layout_constraintTop_toBottomOf="@id/btnSelectImage"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="100dp"
        android:backgroundTint="#D3D3D3"
        android:textColor="@color/black"/>

</androidx.constraintlayout.widget.ConstraintLayout>
