<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imageViewProfile"
        android:layout_gravity="center"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_sign_in" />

    <Button
        android:id="@+id/buttonChangeImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#D3D3D3"
        android:text="@string/change_profile_image"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/editTextDisplayName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/name"
        android:hint="@string/name"
        android:inputType="text"
        android:padding="13dp"
        />


    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/new_password"
        android:hint="@string/new_password"
        android:padding="13dp"
        android:inputType="textPassword"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:backgroundTint="#D3D3D3"
        android:textColor="@color/black"/>

</LinearLayout>
