<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/topPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/myImageView"
            android:layout_width="80dp"
            android:layout_height="45dp"
            android:padding="7dp"
            android:contentDescription="@string/logo_description"
            android:src="@drawable/youtubeicon" />
        <TextView
            android:id="@+id/titleEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_video"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp" />

    </LinearLayout>

    <EditText
        android:id="@+id/etNewContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topPage"
        android:layout_margin="16dp"
        android:padding="15dp"/>



    <Button
        android:id="@+id/btnUploadVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_video"
        app:layout_constraintTop_toBottomOf="@id/etNewContent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="#D3D3D3"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"/>

    <FrameLayout
        android:id="@+id/videoLayout"
        android:layout_width="180dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@id/btnUploadVideo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">

        <VideoView
            android:id="@+id/videoViewUpload"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            />

        <MediaController
            android:id="@+id/media_controller_upload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"/>
    </FrameLayout>

    <Button
        android:id="@+id/btnUploadImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_image"
        app:layout_constraintTop_toBottomOf="@id/videoLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:backgroundTint="#D3D3D3"
        android:textColor="@color/black"/>

    <ImageView
        android:id="@+id/videoUploadImage"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/imageForVideo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnUploadImage" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="20dp">

        <Button
            android:id="@+id/btnSaveVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Upload"
            app:layout_constraintTop_toBottomOf="@id/videoUploadImage"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="7dp"
            android:backgroundTint="#D3D3D3"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:layout_constraintTop_toBottomOf="@id/btnSaveVideo"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="7dp"
            android:backgroundTint="#D3D3D3"
            android:textColor="@color/black"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>