<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserPageActivity">

    <ImageView
        android:id="@+id/imageViewProfile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_sign_in" />

    <TextView
        android:id="@+id/textViewUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageViewProfile"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/username"/>

    <ImageButton
        android:id="@+id/btnGoBackUserPage"
        android:layout_below="@id/imageViewProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_arrow_back_ios_24"
        android:contentDescription="@string/back"
        android:background="@null"
        android:padding="12dp"/>


    <TextView
        android:id="@+id/userVideos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewUsername"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/videos"
        android:textSize="16sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewUserVideos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/userVideos"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

</RelativeLayout>
